hphp/hack/test/typecheck/strict_no_statements2.php.exp
File "strict_no_statements2.php", line 3, characters 1-7:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
